--- a/trade.html
+++ b/trade.html
@@ -46,6 +46,14 @@
             </a>
           </div>
         </div>
+          <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-success" target=_blank href="https://github.com/therealmoney/thirm">
+              <strong>GITHUB</strong>
+            </a>
+          </div>
+        </div>
+        
       </div>
     </div>
   </nav>
