--- a/trade.html
+++ b/trade.html
@@ -11,10 +11,9 @@
 </head>
 
 <style>
-  #chartdiv {
-    width: 100%;
-    height: 500px;
-  }
+table {
+  font-size: 75%;
+}
 </style>
 
 <body>
@@ -134,14 +133,11 @@
 
 
 
-
-
-
   <div class="columns">
     <div class="column">
       <div class="box">
               BUY ORDERBOOK
-        <table id="tab1" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <table id="tab1" class="c table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
           <thead>
             <tr>
               <th scope="col">id</th>
@@ -153,9 +149,65 @@
           </thead>
         </table>
       </div>
+	 
+	   <div class="box">
+    BUY HISTORY
+    <table id="myTable2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+      <thead>
+        <tr>
+          <th scope="col">time</th>
+          <th scope="col">id</th>
+          <th scope="col">have</th>
+          <th scope="col">want</th>
+          <th scope="col">Have Amount (A)</th>
+          <th scope="col">Rate A/B</th>
+          <th scope="col">Want Amount (B)</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
+  
     </div>
 
-    <div class="column is-2">      <div class="box">
+    <div class="column">
+      <div class="box">
+              SELL ORDERBOOK
+        <table id="tab2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+          <thead>
+            <tr>
+              <th scope="col">id</th>
+              <th scope="col">have</th>
+              <th scope="col">want</th>
+              <th scope="col">Rate B/A</th>
+              <th scope="col">ACTION</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+	 
+	  
+	  <div class="box">
+    SELL HISTORY
+  <table id="myTable22" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+    <thead>
+      <tr>
+        <th scope="col">time</th>
+        <th scope="col">id</th>
+        <th scope="col">have</th>
+        <th scope="col">want</th>
+        <th scope="col">Have Amount (A)</th>
+        <th scope="col">Rate A/B</th>
+        <th scope="col">Want Amount (B)</th>
+      </tr>
+    </thead>
+  </table>
+</div>
+
+
+    </div>
+	
+	
+	    <div class="column is-2">      <div class="box">
     <div class="content">
       <div class="field">
         <label class="label"> <span class="coin1"></span> Amount</label>
@@ -187,65 +239,15 @@
         </div>
       </div></div>
     </div>  </div>
-
-    <div class="column">
-      <div class="box">
-              SELL ORDERBOOK
-        <table id="tab2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-          <thead>
-            <tr>
-              <th scope="col">id</th>
-              <th scope="col">have</th>
-              <th scope="col">want</th>
-              <th scope="col">Rate B/A</th>
-              <th scope="col">ACTION</th>
-            </tr>
-          </thead>
-        </table>
-      </div>
-    </div>
+	
+	
+	
+	
 
   </div>
 
 
-  <div class="columns">
-    <div class="column">
-  <div class="box">
-    BUY HISTORY
-    <table id="myTable2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-      <thead>
-        <tr>
-          <th scope="col">time</th>
-          <th scope="col">id</th>
-          <th scope="col">have</th>
-          <th scope="col">want</th>
-          <th scope="col">Have Amount (A)</th>
-          <th scope="col">Rate A/B</th>
-          <th scope="col">Want Amount (B)</th>
-        </tr>
-      </thead>
-    </table>
-  </div>
-  </div>
-  <div class="column">
-<div class="box">
-    SELL HISTORY
-  <table id="myTable22" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-    <thead>
-      <tr>
-        <th scope="col">time</th>
-        <th scope="col">id</th>
-        <th scope="col">have</th>
-        <th scope="col">want</th>
-        <th scope="col">Have Amount (A)</th>
-        <th scope="col">Rate A/B</th>
-        <th scope="col">Want Amount (B)</th>
-      </tr>
-    </thead>
-  </table>
-</div>
-</div>
-</div>
+
 
 
 
