--- a/trade.html
+++ b/trade.html
@@ -321,6 +321,15 @@ COMPLETED SELL ORDERS
         <a href="https://thirm.com/trade.html?coin1=btc&coin2=eth"> <button class="button is-small">BTC-ETH</button></a>
         <a href="https://thirm.com/trade.html?coin1=btc&coin2=usdt"> <button class="button is-small">BTC-USDT</button></a>
         <a href="https://thirm.com/trade.html?coin1=btc&coin2=bch"> <button class="button is-small">BTC-BCH</button></a>
+		<a href="https://thirm.com/trade.html?coin1=usdt&coin2=nano"> <button class="button is-small">USDT-NANO</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=dash"> <button class="button is-small">USDT-DASH</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=doge"> <button class="button is-small">USDT-DOGE</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=ltc"> <button class="button is-small">USDT-LTC</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=nmc"> <button class="button is-small">USDT-NMC</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=xrp"> <button class="button is-small">USDT-XRP</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=zec"> <button class="button is-small">USDT-ZEC</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=eth"> <button class="button is-small">USDT-ETH</button></a>
+        <a href="https://thirm.com/trade.html?coin1=usdt&coin2=bch"> <button class="button is-small">USDT-BCH</button></a>
       </p>
     </div>
   </footer>
