--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<input id="sha256" class="input" placeholder="Genrated Hash will show here"></input>
 	  </div>
 		<div class="column">
-			<button class="button is-link " onclick=genrx()>Generate HASH</button>
+			<button class="button is-link is-info" onclick=genrx()>Generate HASH</button>
 			<button class="button is-link " onclick=register()>Register HASH</button>
 		    <button class="button is-link " onclick=login()>Login To Trade</button>
 		</div>
