--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
 
 	 function register(){
 	   	 var tempxxxxxxxxxxxxx = document.getElementById("sha256").value;
-                 window.location = "https://api.thirm.com/index?token="+tempxxxxxxxxxxxxx;
+                 window.location = "https://api.thirm.com/index?tokenregister="+tempxxxxxxxxxxxxx;
 	   }
 	  </script>
