--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $.ajax({
 	
    success : function(result) {
 
-if (mydata.token == null){
+if (result.token == null){
 window.location = "https://api.thirm.com/index?tokenregister="+tempxxxxxxxxxxxxx;    
 }else{
 localStorage.setItem("usertoken", tempxxxxxxxxxxxxx);
