--- a/trade.html
+++ b/trade.html
@@ -334,7 +334,11 @@ COMPLETED SELL ORDERS
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://www.amcharts.com/lib/4/core.js"></script>
+  <script src="https://www.amcharts.com/lib/4/charts.js"></script>
+  <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
   <script src="trade.js"></script>
+  <script src="chart.js"></script>
 </body>
 
 </html>
