--- a/trade.html
+++ b/trade.html
@@ -130,8 +130,9 @@ table {
     </div>
   </div>
 
-
-
+	 <div class="box">
+        <div id="chartdiv"></div>
+	</div>
 
   <div class="columns">
     <div class="column">
