--- a/trade.html
+++ b/trade.html
@@ -131,7 +131,7 @@ table {
   </div>
 
 	 <div class="box">
-        <div id="chartdiv"></div>
+        <div id="chartdiv" style="height: 400px;"></div>
 	</div>
 
   <div class="columns">
