--- a/trade.html
+++ b/trade.html
@@ -130,9 +130,38 @@ table {
     </div>
   </div>
 
+
+
+  <div class="columns">
+    <div class="column">
+	
 	 <div class="box">
         <div id="chartdiv" style="height: 400px;"></div>
 	</div>
+	
+		</div>
+		
+	    <div class="column">
+	    <div class="box">
+    TRADE HISTORY
+    <table id="myTable2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">ID</th>
+          <th scope="col"><span class="coin1"></span></th>
+          <th scope="col"><span class="coin2"></span></th>
+		  <th scope="col">Rate</th>
+          <th scope="col">Type</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
+  
+  	</div>
+	</div>
+  
+  
 
   <div class="columns">
     <div class="column">
@@ -142,31 +171,15 @@ table {
           <thead>
             <tr>
               <th scope="col">id</th>
-              <th scope="col">have</th>
-              <th scope="col">want</th>
-              <th scope="col">Rate A/B</th>
+              <th scope="col"><span class="coin1"></span></th>
+              <th scope="col"><span class="coin2"></span></th>
+              <th scope="col">Rate</th>
               <th scope="col">ACTION</th>
             </tr>
           </thead>
         </table>
       </div>
 	 
-	   <div class="box">
-    BUY HISTORY
-    <table id="myTable2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-      <thead>
-        <tr>
-          <th scope="col">time</th>
-          <th scope="col">id</th>
-          <th scope="col">have</th>
-          <th scope="col">want</th>
-          <th scope="col">Have Amount (A)</th>
-          <th scope="col">Rate A/B</th>
-          <th scope="col">Want Amount (B)</th>
-        </tr>
-      </thead>
-    </table>
-  </div>
   
     </div>
 
@@ -177,32 +190,15 @@ table {
           <thead>
             <tr>
               <th scope="col">id</th>
-              <th scope="col">have</th>
-              <th scope="col">want</th>
-              <th scope="col">Rate B/A</th>
+              <th scope="col"><span class="coin1"></span></th>
+              <th scope="col"><span class="coin2"></span></th>
+              <th scope="col">Rate</th>
               <th scope="col">ACTION</th>
             </tr>
           </thead>
         </table>
       </div>
 	 
-	  
-	  <div class="box">
-    SELL HISTORY
-  <table id="myTable22" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-    <thead>
-      <tr>
-        <th scope="col">time</th>
-        <th scope="col">id</th>
-        <th scope="col">have</th>
-        <th scope="col">want</th>
-        <th scope="col">Have Amount (A)</th>
-        <th scope="col">Rate A/B</th>
-        <th scope="col">Want Amount (B)</th>
-      </tr>
-    </thead>
-  </table>
-</div>
 
 
     </div>
