--- a/trade.html
+++ b/trade.html
@@ -164,28 +164,11 @@ table {
   
 
   <div class="columns">
-    <div class="column">
-      <div class="box">
-              BUY ORDERBOOK
-        <table id="tab1" class="c table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-          <thead>
-            <tr>
-              <th scope="col">id</th>
-              <th scope="col"><span class="coin1"></span></th>
-              <th scope="col"><span class="coin2"></span></th>
-              <th scope="col">Rate</th>
-              <th scope="col">ACTION</th>
-            </tr>
-          </thead>
-        </table>
-      </div>
-	 
-  
-    </div>
+
 
     <div class="column">
       <div class="box">
-              SELL ORDERBOOK
+	  i want   <span class="coin2"></span> i have  <span class="coin1"></span>
         <table id="tab2" class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
           <thead>
             <tr>
@@ -198,9 +181,23 @@ table {
           </thead>
         </table>
       </div>
-	 
-
-
+    </div>
+	
+	    <div class="column">
+      <div class="box">
+	  	  i want   <span class="coin1"></span> i have  <span class="coin2"></span>
+        <table id="tab1" class="c table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+          <thead>
+            <tr>
+              <th scope="col">id</th>
+              <th scope="col"><span class="coin1"></span></th>
+              <th scope="col"><span class="coin2"></span></th>
+              <th scope="col">Rate</th>
+              <th scope="col">ACTION</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
     </div>
 	
 	
@@ -321,6 +318,7 @@ COMPLETED SELL ORDERS
   <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
   <script src="trade.js"></script>
   <script src="chart.js"></script>
+  <script  src="timeago.js"></script>
 </body>
 
 </html>
