--- a/trade.html
+++ b/trade.html
@@ -305,8 +305,15 @@ COMPLETED SELL ORDERS
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <a href="https://thirm.com/trade.html?coin1=btc&coin2=nano"> <button class="button is-small">BTC-NANO</button></a>
-	<a href="https://thirm.com/trade.html?coin1=usdt&coin2=nano"> <button class="button is-small">USDT-NANO</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=bch"> <button class="button is-small">BTC-BCH</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=dash"> <button class="button is-small">BTC-DASH</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=doge"> <button class="button is-small">BTC-DOGE</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=eth"> <button class="button is-small">BTC-ETH</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=ltc"> <button class="button is-small">BTC-LTC</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=nano"> <button class="button is-small">BTC-NANO</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=usdt"> <button class="button is-small">BTC-USDT</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=xrp"> <button class="button is-small">BTC-XRP</button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=zec"> <button class="button is-small">BTC-ZECbutton></a>
       </p>
     </div>
   </footer>
