--- a/trade.html
+++ b/trade.html
@@ -313,7 +313,7 @@ COMPLETED SELL ORDERS
 	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=nano"> <button class="button is-small">BTC-NANO</button></a>
 	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=usdt"> <button class="button is-small">BTC-USDT</button></a>
 	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=xrp"> <button class="button is-small">BTC-XRP</button></a>
-	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=zec"> <button class="button is-small">BTC-ZEC<button></a>
+	      	<a href="https://thirm.com/trade.html?coin1=btc&coin2=zec"> <button class="button is-small">BTC-ZEC</button></a>
       </p>
     </div>
   </footer>
