--- a/trade.html
+++ b/trade.html
@@ -79,12 +79,12 @@ table {
                 <option>btc</option>
                 <option>dash</option>
                 <option>doge</option>
+                <option>eth</option>
                 <option>ltc</option>
                 <option>nano</option>
-                <option>nmc</option>
+                <option>usdt</option>
                 <option>xrp</option>
                 <option>zec</option>
-                <option>eth</option>
               </select>
             </span>
           </p>
@@ -105,12 +105,12 @@ table {
                 <option>btc</option>
                 <option>dash</option>
                 <option>doge</option>
+                <option>eth</option>
                 <option>ltc</option>
                 <option>nano</option>
-                <option>nmc</option>
+                <option>usdt</option>
                 <option>xrp</option>
                 <option>zec</option>
-                <option>eth</option>
               </select>
             </span>
           </p>
