--- a/trade.html
+++ b/trade.html
@@ -5,8 +5,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
+
+	<!-- Primary Meta Tags -->
+<title>THIRM - Anonymous Fee-less Crypto Exchange</title>
+<meta name="title" content="THIRM - Anonymous Fee-less Crypto Exchange">
+<meta name="description" content="Thirm is crypto exchange with 0 % trading fees, bidding order book, anonymous trading, API access.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://thirm.com/">
+<meta property="og:title" content="THIRM - Anonymous Fee-less Crypto Exchange">
+<meta property="og:description" content="Thirm is crypto exchange with 0 % trading fees, bidding order book, anonymous trading, API access.">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://thirm.com/">
+<meta property="twitter:title" content="THIRM - Anonymous Fee-less Crypto Exchange">
+<meta property="twitter:description" content="Thirm is crypto exchange with 0 % trading fees, bidding order book, anonymous trading, API access.">
+<meta property="twitter:image" content="">
+	
+	
   <title>THIRM</title>
 </head>
 
