--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                     </div>
 
 
+
+
                 </div>
 
             </div>
@@ -147,13 +149,37 @@
                 <div class="" style="width: 300px;">
                     <div class="panel sidebar">
                         <p class="panel-tabs">
-                            <a class="is-active">SELL</a>
-                            <a>BUY</a>
+                            <a v-bind:class="{ 'is-active': orderType=='sell' }" v-on:click="orderType='sell'">SELL</a>
+                            <a v-bind:class="{ 'is-active': orderType=='buy' }" v-on:click="orderType='buy'">BUY</a>
                         </p>
                         <div class="panel-block">
-
+                            <div class="field">
+                                <p class="control amount coin1">
+                                    <input class="input" type="text" v-model="coin1Amount" placeholder="0.00">
+                                    <span class="coin is-uppercase">
+                                        {{coin1}}
+                                    </span>
+                                </p>
+                            </div>
                         </div>
-
+                        <div class="panel-block">
+                                <div class="field">
+                                    <p class="control amount coin2">
+                                        <input class="input" type="text" v-model="coin2Amount" placeholder="0.00">
+                                        <span class="coin is-uppercase">
+                                            {{coin2}}
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        <div class="panel-block">
+                            <button v-if="!wifKey" v-on:click="showLogin" class="button is-warning">
+                                Login to Trade
+                            </button>
+                            <button v-if="wifKey" v-on:click="makeMarketOrder" class="button is-warning">
+                                Make Order
+                            </button>
+                        </div>
 
                     </div>
                 </div>
@@ -166,19 +192,20 @@
             <div class="modal-background"></div>
             <div class="modal-card">
                 <header class="modal-card-head">
-                    <p class="modal-card-title">Modal title</p>
-                    <button class="delete" aria-label="close"></button>
+                    <p class="modal-card-title">Login</p>
+                    <button class="delete" aria-label="close" v-on:click="closeLogin"></button>
                 </header>
                 <section class="modal-card-body">
                     <div class="field">
                         <div class="control">
-                            <input class="input is-primary" type="text" v-model="wifKey" placeholder="Enter your WIF key">
+                            <input class="input is-primary" type="text" v-model="wifKey"
+                                placeholder="Enter your WIF key">
                         </div>
                     </div>
                 </section>
                 <footer class="modal-card-foot">
                     <button class="button is-danger" v-on:click="login">Login</button>
-                    <button class="button is-white">Proceed without login</button>
+                    <button class="button is-white" v-on:click="closeLogin">Proceed without login</button>
                 </footer>
             </div>
         </div>
