--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
             </div>
             <div class="level-left">
                 <div class="level-item has-text-centered">
-                    <button class="button is-success" v-on:click="showLogin">
+                    <button class="button is-success" v-if="!wifKey" v-on:click="showLogin">
                         Login
+                    </button>
+                    <button class="button is-black" v-if="wifKey" v-on:click="logout">
+                        Logout
                     </button>
 
                 </div>
@@ -103,6 +106,40 @@
                     <p class="panel-heading">Order Book</p>
 
                     <div class="panel-block">
+                        <div class="tile is-ancestor">
+                            <div class="tile">
+                                <table id="bids-table" class="table is-striped is-narrow is-hoverable is-fullwidth">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Bids</th>
+                                            <th scope="col">Bids Sum</th>
+                                            <th scope="col">Rate</th>
+                                        </tr>
+                                        <tr v-for="b in order_book.bids" v-bind:key="b[0]">
+                                            <td>{{b[1] }}</td>
+                                            <td>{{b[2] }}</td>
+                                            <td>{{b[0] }}</td>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                            <div class="tile">
+                                <table id="asks-table" class="table is-striped is-narrow is-hoverable is-fullwidth">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Rate</th>
+                                            <th scope="col">Asks Sum</th>
+                                            <th scope="col">Asks</th>
+                                        </tr>
+                                        <tr v-for="a in order_book.asks" v-bind:key="a[0]">
+                                            <td>{{a[0] }}</td>
+                                            <td>{{a[2] }}</td>
+                                            <td>{{a[1] }}</td>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
 
                     </div>
 
@@ -163,15 +200,15 @@
                             </div>
                         </div>
                         <div class="panel-block">
-                                <div class="field">
-                                    <p class="control amount coin2">
-                                        <input class="input" type="text" v-model="coin2Amount" placeholder="0.00">
-                                        <span class="coin is-uppercase">
-                                            {{coin2}}
-                                        </span>
-                                    </p>
-                                </div>
+                            <div class="field">
+                                <p class="control amount coin2">
+                                    <input class="input" type="text" v-model="coin2Amount" placeholder="0.00">
+                                    <span class="coin is-uppercase">
+                                        {{coin2}}
+                                    </span>
+                                </p>
                             </div>
+                        </div>
                         <div class="panel-block">
                             <button v-if="!wifKey" v-on:click="showLogin" class="button is-warning">
                                 Login to Trade
