--- a/new.html
+++ b/new.html
@@ -17,27 +17,21 @@
     <div class="tile">
       <div class="tile is-parent is-vertical">
         <article class="tile is-child notification is-primary">
-          <p class="title">Vertical...</p>
-          <p class="subtitle">Top tile</p>
-        </article>
-        <article class="tile is-child notification is-warning">
-          <p class="title">...tiles</p>
-          <p class="subtitle">Bottom tile</p>
+          <p class="title">orderbook</p>
+          <p class="subtitle">orderbook</p>
         </article>
       </div>
       <div class="tile is-parent">
         <article class="tile is-child notification is-info">
-          <p class="title">Middle tile</p>
-          <p class="subtitle">With an image</p>
-          <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
+          <p class="title">BUy/SELL</p>
+          <p class="subtitle">BUY SELL</p>
+
         </article>
       </div>
     </div>
     <div class="tile is-parent">
       <article class="tile is-child notification is-danger">
-        <p class="title">Orderbook</p>
+        <p class="title">recent orders</p>
         <p class="subtitle">Aligned with the right tile</p>
         <div class="content">
           <!-- Content -->
